Created a singleton class DatabaseConnection.java which centralize the connection of the db when the user start the app